# GPT

./: .gitignore  Appointment.postman_collection.json  README.md  WhatsApp Chat with Amie.txt  environment.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
Train_Your_Language_Model_Course/notebooks/: 1_DataCleaning.ipynb  2_BytePairEncoding.ipynb  3_TransformerModel.ipynb  5_FineTuningDataset.ipynb  6_1_FineTuningNoContext.ipynb  main.ipynb
Train_Your_Language_Model_Course/output/: combined_text.txt  fine_tuning.json
cloud_gpu_scripts/: jarvis_labs.txt  prime_intellect.txt
data/whatsapp_chats/: WhatsApp Chat with Amie.txt
logs/: gpt2_hellaswag_acc.pt  gpt2_xl_hellaswag_acc.pt
notebooks/: fineweb_dataset.ipynb  main.ipynb  tokenization.ipynb  word_embeddings_tutorial.ipynb
notebooks/wandb/run-20240717_230501-oeiv69ca/files/: config.yaml
setup_scripts/: javis_labs_startup.sh
src/: core.py  data_module.py  dataset.py  download_fineweb_dataset.py  fineweb.py  hellaswag.py  main.ipynb  main.py  main_solid.py  models.py  module.py  settings.py  utils.py
src/dataset/: dataset_classes.py  download_fineweb_dataset.py  download_ultrachat_200k_dataset.py
src/engine/: data_module.py  generate.py  module.py  settings.py  train.py
src/finetune/: LoRA.py  __init__.py  chat_assistant.py  dataloader.py  main.py  models.py  settings.py  utils.py
src/pretrain/: hellaswag_eval.py  main.py  models.py  settings.py  utils.py
src/test/: README.md  test.ipynb  test_dataset.py  test_main.py  test_models.py  test_settings.py  test_utils.py
