[tool.poetry]
name = "GPT"
version = "0.1.0"
description = ""
authors = ["sampath <118274231+sampath017@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.1.1"
notebook = "^7.2.2"
autopep8 = "^2.3.1"
tiktoken = "^0.9.0"
torch = "^2.6.0"
datasets = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
