[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "datasets>=3.6.0",
    "huggingface-hub[hf-xet]>=0.33.1",
    "jarviscloud>=0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]
